Add plugin, add information to README.